--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,24 @@ h1, h2 {
     border-radius: 100%;
 }
 
+/* FORMACION */
+
+.card-training {
+    background-color: #131313;
+    border: none;
+    border: .1rem solid rgb(34, 34, 34);
+    transition: .3s;
+}
+
+.card-training:hover {
+    border: .1rem solid white;
+}
+
+.card-training img {
+    border-radius: 0;
+}
+
+
 @media screen and (min-width: 320px) {
     .presentation-info {
         text-align: center;
@@ -83,6 +101,17 @@ h1, h2 {
 
     .presentation-photo img {
         width: 11rem;
+    }
+
+    /* FORMACIÓN */
+
+    .card-training {
+        width: 10rem;
+    }
+    
+    .card-training img {
+        width: 6rem;
+        margin: 0 auto;
     }
 }
 
@@ -115,5 +144,11 @@ h1, h2 {
 
     .presentation-photo img {
         width: 17rem;
+    }
+
+    /* FORMACIÓN */
+    
+    .card-training {
+        width: 12rem;
     }
 }
