--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,15 @@ h1, h2 {
     font-family: 'DM Serif Display', serif;
 }
 
+.nav-link {
+    color: white;
+    transition: .3s;
+}
+
+.nav-link:hover {
+    color: #fa5c01;
+}
+
 .presentation-info .hello, .title-h2 {
     color: #fa5c01;
 }
@@ -39,7 +48,7 @@ h1, h2 {
 .card-technologies, .card-project {
     background-color: #161616;
     border: none;
-    border: .1rem solid rgb(51, 51, 51);
+    border: .1rem solid rgb(36, 36, 36);
     transition: .3s;
 }
 
@@ -141,6 +150,10 @@ h1, h2 {
         width: 15rem;
     }
 
+    .container-main {
+        padding-top: 3.2rem;
+    }
+
     /* PROYECTOS */
 
     .card-project  {
@@ -150,14 +163,14 @@ h1, h2 {
 
 @media screen and (min-width: 1300px) {
     .presentation-info .hello {
-        font-size: 4.1rem;
+        font-size: 4.5rem;
     }
 
     .presentation-info .my-name-title {
-        font-size: 3.6rem;
+        font-size: 4rem;
     }
 
     .presentation-photo img {
-        width: 17rem;
+        width: 18rem;
     }
 }
