--- a/css/send-form.css
+++ b/css/send-form.css
@@ -6,12 +6,12 @@
 
 main {
     height: 100vh;
-    background-color: #111111;
+    background-color: #010409;
 }
 
 .card {
     background: none;
     border: none;
-    background-color: #1b1b1b;
+    background-color: #0e0d0d;
     border: .1rem solid #FA5C01;
 }
